Changed method getFirst() to get(0) to avoid version conflict